--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             <p>Este es un párrafo de ejemplo para probar 
                 cómo funcionan los estilos en CSS.</p>
         </div>
-
+        <div class="second-h2-p2">
+            <h2 class="second-page">Miguel Angel
+                Meñaca Coral.</h2>
+            <p>Este es un párrafo más extenso para probar
+                cómo funcionan los estilos en CSS.</p>
+        </div>
     </div>
     
     
