--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <p>Este es un párrafo más extenso para probar
                 cómo funcionan los estilos en CSS.</p>
         </div>
+        <div class="third-h3-p3">
+        </div>
     </div>
 </body>
 </html>
