--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <main class="container">
         <section class="articles">
             <article class="sections">
-                <div class="h2-p">
-                    <h2>Soy Miguel Angel, <span>Desarrollador Web.</span></h2>
+                <div class="Introduction">
+                    <h2>Soy Miguel Angel, <span>Desarrollador Web.</span>
                     <p>Estudiante de Ingeniería Electrónica en décimo semestre y egresado en Tecnología en Automatización Industrial con un fuerte enfoque en programación. Mi formación combina la electrónica y la automatización con un creciente dominio en el desarrollo de software. Soy apasionado por el uso de la programación para resolver problemas complejos y diseñar soluciones innovadoras que integren tecnología y automatización. Busco oportunidades para aplicar mis conocimientos en lenguajes de programación y desarrollar nuevas habilidades en un entorno profesional desafiante, donde pueda crecer tanto profesional como personalmente.</p>
                 </div>
                 <div>
@@ -49,4 +49,5 @@
         <p>Todos los derechos reservados &copy; 2024 - Miguel Angel Meñaca Coral.</p>
     </footer>
 </body>
+
 </html>
