Pagina casi hecha en HTML y CSS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <article class="sections">
                 <div class="Introduction">
                     <h2>Soy Miguel Angel, <span>Desarrollador Web.</span>
-                    <p>Estudiante de Ingeniería Electrónica en décimo semestre y egresado en Tecnología en Automatización Industrial con un fuerte enfoque en programación. Mi formación combina la electrónica y la automatización con un creciente dominio en el desarrollo de software. Soy apasionado por el uso de la programación para resolver problemas complejos y diseñar soluciones innovadoras que integren tecnología y automatización. Busco oportunidades para aplicar mis conocimientos en lenguajes de programación y desarrollar nuevas habilidades en un entorno profesional desafiante, donde pueda crecer tanto profesional como personalmente.</p>
+                    <p>Estudiante de <i>Ingeniería Electrónica</i> en décimo semestre y egresado en Tecnología en Automatización Industrial con un fuerte enfoque en programación. Mi formación combina la electrónica y la automatización con un creciente dominio en el desarrollo de software. Soy apasionado por el uso de la programación para resolver problemas complejos y diseñar soluciones innovadoras que integren tecnología y automatización. Busco oportunidades para aplicar mis conocimientos en lenguajes de programación y desarrollar nuevas habilidades en un entorno profesional desafiante, donde pueda crecer tanto profesional como personalmente.</p>
                 </div>
                 <div>
                     <img src="img/FotoHojadeVida.png" alt="Foto de perfil de Miguel Angel">
