--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;700&display=swap">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="img/portfolio.png" type="image/x-icon">
     <title>Mi primera página</title>
@@ -14,8 +14,8 @@
         <h1>Miguel Angel</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre Mi</a></li>
+                <li><a href=".">Home</a></li>
+                <li><a href="AboutMe.html">Sobre Mi</a></li>
                 <li><a href="#">Contacto</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>
