--- a/index.html
+++ b/index.html
@@ -1,53 +1,27 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;700&display=swap">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="img/portfolio.png" type="image/x-icon">
-    <title>Mi primera página</title>
+    <title>DevFolio</title>
 </head>
 <body>
-    <header>
-        <h1>Miguel Angel</h1>
-        <nav>
-            <ul>
-                <li><a href=".">Home</a></li>
-                <li><a href="AboutMe.html">Sobre Mi</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Blog</a></li>
+    <div class="Container-Nav">
+        <h1 class="Tittle-Main">DevFolio</h1>
+        <nav class="Nav-Main">
+            <ul class="Lists">
+                <li ><a class="Home-A" href="#Section-Main">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-    </header>
-
-    <main class="container">
-        <section class="articles">
-            <article class="sections">
-                <div class="Introduction">
-                    <h2>Soy Miguel Angel, <span>Desarrollador Web.</span>
-                    <p>Estudiante de <i>Ingeniería Electrónica</i> en décimo semestre y egresado en Tecnología en Automatización Industrial con un fuerte enfoque en programación. Mi formación combina la electrónica y la automatización con un creciente dominio en el desarrollo de software. Soy apasionado por el uso de la programación para resolver problemas complejos y diseñar soluciones innovadoras que integren tecnología y automatización. Busco oportunidades para aplicar mis conocimientos en lenguajes de programación y desarrollar nuevas habilidades en un entorno profesional desafiante, donde pueda crecer tanto profesional como personalmente.</p>
-                </div>
-                <div>
-                    <img src="img/FotoHojadeVida.png" alt="Foto de perfil de Miguel Angel">
-                </div>
-            </article>
-        </section>
-        
-        <aside class="secondary-menu">
-            <a href="https://github.com/DevilsWillCry" target="_blank">
-                <i class="fab fa-github"></i> GitHub
-            </a>
-            <a href="https://www.linkedin.com/in/miguel-angel-me%C3%B1aca-coral-037b06213/" target="_blank">
-                <i class="fab fa-linkedin"></i> LinkedIn
-            </a>
-        </aside>
-    </main>
-    
-    <footer>
-        <p>Todos los derechos reservados &copy; 2024 - Miguel Angel Meñaca Coral.</p>
-    </footer>
+    </div>
+    <section id="Section-Main">
+        <h1 class="My-Tittle">Soy Miguel Angel,</h1>
+        <span>Desarrollador Web</span>
+    </section>
+    <section id="Section-AboutMe"></section>
 </body>
-
 </html>
