Mejorar Sección Sobre mi.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
             </ul>
         </nav>
     </div>
+    
     <section id="Section-Main" class="scroll-section">
         <h1 class="My-Tittle">Soy Miguel Angel, <span>Desarrollador Web</span></h1>
-        <img src="img/FotoHojadeVida.png" alt="Imagen de perfil" class="Img-Main">
+        <img src="img/IMG_MAIN_NO_BACKGROUND.png" alt="Imagen de perfil" class="Img-Main">
     </section>
+
     <section id="Section-AboutMe"> 
         <div class="Container-AboutMe">
             <div class="Img-AboutMe">
@@ -44,6 +46,7 @@
                     <li>Decimo semestre egresado en Tecnología en Automatización Industrial</li>
                     <li>Fuerte enfoque en programación y desarrollo de software</li>
                 </ul>
+                <p class="Tecnologias">xd</p>
             </div>
         </div>
     </section>
