Sección Main y About Me terminadas

--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
                     <div class="Containe-DB">
                         <i class="fa-solid fa-database"></i>
                         <h3>Bases de Datos</h3>
-                    </div>
+                    </div>                                                                              
                 </div>
-
                 <div class="Container-Info">
                     <h2>Contacto</h2>
                     <div class="Contact-Info">
-                        <p>Email: <a href="mailto:miguel.menaca01@gmail.com">miguel.menaca01@gmail.com</a></p>
-                        <p>Teléfono: (+57) 317 846 5152</p>
-
+                        <p ><a href="https://github.com/DevilsWillCry" target="_blank"><i class="fa-brands fa-github"></i></a></p>
+                        <p><a href="https://www.linkedin.com/in/miguel-angel-me%C3%B1aca-coral-037b06213/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></p>
+                        <p><a href="mailto:miguel.menaca01@gmail.com"><i class="fa-solid fa-paper-plane"></i></a></p>
+                    </div>
                 </div>
         </div>
     </section>
