--- a/index.html
+++ b/index.html
@@ -94,28 +94,47 @@
                 <h2>Experiencia</h2>
                 <div class="Card">
                     <h3>Mantenimiento, Bodega y administración</h3>
-                    <p><i>Feb.2019 - Feb. 2020</i></p>
+                    <p><i>Febrero 2019 - Marzo 2020</i></p>
                     <ul>
-                        <li>Realice mantenimiento preventivo a las máquinas de las 3
-                            plantas con el fin de un proceso óptimo.</li>
-                        <li>Gestione y organice los documentos de la parte administrativa
-                            de mantenimiento</li>
+                        <li>Implementé y coordiné un sistema de mantenimiento preventivo para las máquinas de las tres plantas,
+                            asegurando un rendimiento óptimo y reduciendo el tiempo de inactividad no planificado. 
+                            Utilicé software de gestión de mantenimiento computarizado (CMMS) para programar y realizar 
+                            un seguimiento de las tareas de mantenimiento.</li>
+                        <li>Desarrollé e implementé procedimientos para la gestión y organización de la documentación 
+                            administrativa relacionada con el mantenimiento. Utilicé herramientas digitales para optimizar 
+                            el almacenamiento y la recuperación de información, mejorando la eficiencia y asegurando el 
+                            cumplimiento de los estándares de la empresa.</li>
                     </ul>
                 </div>
                 <div class="Card">
                     <h3>Desarrollo de Software para el Seguimiento de Asesorías de Ejercicio</h3>
-                    <p><i>Febrero 2024 - Agotos 2024</i></p>
-                    <p>Desarrollé una aplicación de escritorio para gestionar y realizar un seguimiento efectivo 
+                    <p><i>Febrero 2024 - Agosto 2024</i></p>
+                    <p>Desarrollé una aplicación de escritorio para un cliente, con el fin de gestionar y realizar un seguimiento efectivo 
                         de las asesorías de ejercicio utilizando <strong>Python <i class="fab fa-python"></i></strong>, empleando 
                         la <strong>API</strong> de <strong>Google Sheets <i class="fa-solid fa-table"></i></strong> para la gestión 
                         y almacenamiento de datos.
                     </p>
                 </div>
+                <div class="Card">
+                    <h3>Aplicación para el Filtrado y Visualización de Señales de Audio</h3>
+                    <p><i>Julio 2023- Diciembre 2023</i></p>
+                    <p>Desarrollé este software para un cliente el cual le permite la grabación, procesamiento y análisis de señales de audio mediante 
+                        técnicas avanzadas de filtrado digital. Desarrollado en 
+                        <strong>Python <i class="fab fa-python"></i></strong> utilizando <strong>PyQt5 <i class="fa-solid fa-book"></i></strong> 
+                        para  la interfaz gráfica, el software incorpora funciones para aplicar filtros pasa-altas, 
+                        pasa-bajas, pasa-bandas y rechaza-bandas a las señales de audio. Además, incluye herramientas 
+                        para visualizar tanto la señal original como las versiones filtradas y sus representaciones 
+                        en el dominio de la frecuencia, facilitando así el análisis detallado de la información 
+                        acústica. La aplicación es adecuada para investigadores y técnicos que necesitan procesar 
+                        y analizar señales de audio con precisión.
+                    </p>
+                </div>
             </div>
         </div>
+
         <div class="Container-Education">
-            <h2>Educación</h1>
             <div class="Container-Cards">
+                <h2>Educación</h2>
                 <div class="Card">
                     <h3>Ingeniería Electrónica</h3>
                     <p><i>Febrero 2020 - Actual</i></p>
@@ -126,13 +145,14 @@
                     <h3>Tecnología en Automatización Industrial</h3>
                     <p><i>Julio 2017 - Enero 2019</i></p>
                     <p>Realicé una Tecnología en Automatización Industrial, en el 
-                        <strong>Servicio Nacional de Aprendizaje <i class="fa-solid fa-school"></i></strong>
-                        en el <strong>Centro de Electricidad y Automatización Industrial</strong>.
+                        <strong>Servicio Nacional de Aprendizaje Centro de Electricidad y 
+                            Automatización Industrial <i class="fa-solid fa-school"></i></strong>.
                     </p>                    
                 </div>
             </div>
         </div>
     </section>
     <section id="Contacto"></section>
+    <script src="app.js"></script>
 </body>
 </html>
