Falta sección contacto, hacerscroll visible

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul class="Lists">
                     <li><a href="#Section-Main">Inicio</a></li>
                     <li><a href="#Section-AboutMe">Sobre mi</a></li>
-                    <li><a href="#Section-Experience-Education">Experiencia</a></li>
-                    <li><a href="#Contacto">Contacto</a></li>
+                    <li><a href="#Section-Experience-Education">Experiencia & Educación</a></li>
+                    <li><a href="#Section-Contacto">Contacto</a></li>
             </ul>
         </nav>
     </div>
@@ -96,9 +96,9 @@
                     <h3>Mantenimiento, Bodega y administración</h3>
                     <p><i>Febrero 2019 - Marzo 2020</i></p>
                     <ul>
-                        <li>Implementé y coordiné un sistema de mantenimiento preventivo para las máquinas de las tres plantas,
+                        <li>Realicé mantenimiento preventivo para las máquinas de las tres plantas,
                             asegurando un rendimiento óptimo y reduciendo el tiempo de inactividad no planificado. 
-                            Utilicé software de gestión de mantenimiento computarizado (CMMS) para programar y realizar 
+                            Utilicé software de gestión de mantenimiento computarizado (<strong>CMMS</strong>) para programar y realizar 
                             un seguimiento de las tareas de mantenimiento.</li>
                         <li>Desarrollé e implementé procedimientos para la gestión y organización de la documentación 
                             administrativa relacionada con el mantenimiento. Utilicé herramientas digitales para optimizar 
@@ -140,6 +140,43 @@
                     <p><i>Febrero 2020 - Actual</i></p>
                     <p>Pregrado en Ingeniería Electrónica, Actualmente estudiando decimó semestre en la 
                         <strong>Universidad Santiago de Cali <i class="fa-solid fa-school"></i></strong>.</p>
+                </div>              
+                <div class="Card">
+                    <h3>Certificación de Bases de Datos Generalidades y Sistemas de Gestión</h3>
+                    <p><i>Junio 2024 - Julio 2024</i></p>
+                    <p>Obtuve una certificación en  <strong>Bases de Datos <i class="fa-solid fa-database"></i></strong> 
+                        a través de un curso impartido por el <strong>SENA <i class="fa-solid fa-school"></i></strong></strong>, donde adquirí conocimientos fundamentales 
+                        sobre las bases de datos y su gestión, incluyendo conceptos clave, diseño de bases de datos, y el uso 
+                        de sistemas de gestión de bases de datos (<strong>DBMS</strong>).                        
+                    </p>                  
+                </div>
+                <div class="Card">
+                    <h3>Certificación en Python Básico</h3>
+                    <p><i>Enero 2024 - Febrero 2024</i></p>
+                    <p>Obtuve una certificación en <strong>Python <i class="fab fa-python"></i></strong> básico a través de 
+                        <strong>HackerRank <i class="fa-brands fa-hackerrank"></i></strong>, donde desarrollé habilidades 
+                        fundamentales en programación utilizando <strong>Python <i class="fab fa-python"></i></strong>. 
+                        Durante el curso, aprendí conceptos esenciales como estructuras de control de flujo, 
+                        manipulación de datos, funciones y manejo de errores. Esta certificación valida 
+                        mi capacidad para escribir scripts y desarrollar soluciones  básicas usando 
+                        <strong>Python <i class="fab fa-python"></i></strong>.
+                    </p>                    
+                </div>
+                <div class="Card">
+                    <h3>Certificación en Metodología de la Programación de Sistemas Informáticos</h3>
+                    <p><i>Julio 2023 - Agosto 2023</i></p>
+                    <p>Obtuve una certificación en Metodología de la Programación de Sistemas Informáticos a través 
+                        de un curso impartido por el <strong>SENA <i class="fa-solid fa-school"></i></strong></strong>, donde aprendí principios fundamentales de programación, 
+                        diseño de algoritmos y estructuración de sistemas informáticos eficientes.
+                    </p>                    
+                </div>
+                <div class="Card">
+                    <h3>Certificación en Fundamentals of Accelerated Data Science</h3>
+                    <p><i>18 de enero de 2022 - 18 de febrero de 2022</i></p>
+                    <p>Obtuve una certificación de <strong>NVIDIA</strong> en "<strong>Fundamentals of Accelerated Data Science</strong>", 
+                        donde adquirí conocimientos sobre técnicas avanzadas de ciencia de datos utilizando aceleración 
+                        por GPU, incluyendo procesamiento de datos, análisis y modelado con herramientas de aprendizaje 
+                        automático.</p>                  
                 </div>
                 <div class="Card">
                     <h3>Tecnología en Automatización Industrial</h3>
@@ -149,10 +186,20 @@
                             Automatización Industrial <i class="fa-solid fa-school"></i></strong>.
                     </p>                    
                 </div>
-            </div>
-        </div>
+            </div>   
     </section>
-    <section id="Contacto"></section>
+    <section id="Section-Contacto">
+
+    </section>
+    <div class="arrow-up">
+        <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
+    </div>
+
+    <footer>
+        <p>© 2023  |  Desarrollado por <a href="https://www.linkedin.com/in/daniel-ramirez-barrios-a86b3b14b/">Daniel Ramírez Barrios</a></p>
+        <p>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+        <p>Developed using HTML, CSS, and JavaScript</p> 
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
