Hacer sección Contacto

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="Lists">
                     <li><a href="#Section-Main">Inicio</a></li>
                     <li><a href="#Section-AboutMe">Sobre mi</a></li>
-                    <li><a href="#Section-Experience-Education">Experiencia & Educación</a></li>
+                    <li><a href="#Section-Experience-Education">Experiencia</a></li>
                     <li><a href="#Section-Contacto">Contacto</a></li>
             </ul>
         </nav>
@@ -31,7 +31,7 @@
     </section>
 
     <section id="Section-AboutMe" class="scroll-section"> 
-        <div class="Container-AboutMe">
+        <div class="Container-AboutMe Reveal">
             <div class="Img-AboutMe">
                 <img src="img/IMG_MAIN.png" alt="Foto Miguel Angel mirando de frente">
             </div>
@@ -89,23 +89,9 @@
         </div>
     </section>
     <section id="Section-Experience-Education">
-        <div class="Container-Experience">
+        <div class="Container-Experience Reveal">
             <div class="Container-Cards">
                 <h2>Experiencia</h2>
-                <div class="Card">
-                    <h3>Mantenimiento, Bodega y administración</h3>
-                    <p><i>Febrero 2019 - Marzo 2020</i></p>
-                    <ul>
-                        <li>Realicé mantenimiento preventivo para las máquinas de las tres plantas,
-                            asegurando un rendimiento óptimo y reduciendo el tiempo de inactividad no planificado. 
-                            Utilicé software de gestión de mantenimiento computarizado (<strong>CMMS</strong>) para programar y realizar 
-                            un seguimiento de las tareas de mantenimiento.</li>
-                        <li>Desarrollé e implementé procedimientos para la gestión y organización de la documentación 
-                            administrativa relacionada con el mantenimiento. Utilicé herramientas digitales para optimizar 
-                            el almacenamiento y la recuperación de información, mejorando la eficiencia y asegurando el 
-                            cumplimiento de los estándares de la empresa.</li>
-                    </ul>
-                </div>
                 <div class="Card">
                     <h3>Desarrollo de Software para el Seguimiento de Asesorías de Ejercicio</h3>
                     <p><i>Febrero 2024 - Agosto 2024</i></p>
@@ -129,10 +115,24 @@
                         y analizar señales de audio con precisión.
                     </p>
                 </div>
+                <div class="Card">
+                    <h3>Mantenimiento, Bodega y administración</h3>
+                    <p><i>Febrero 2019 - Marzo 2020</i></p>
+                    <ul>
+                        <li>Realicé mantenimiento preventivo para las máquinas de las tres plantas,
+                            asegurando un rendimiento óptimo y reduciendo el tiempo de inactividad no planificado. 
+                            Utilicé software de gestión de mantenimiento computarizado (<strong>CMMS</strong>) para programar y realizar 
+                            un seguimiento de las tareas de mantenimiento.</li>
+                        <li>Desarrollé e implementé procedimientos para la gestión y organización de la documentación 
+                            administrativa relacionada con el mantenimiento. Utilicé herramientas digitales para optimizar 
+                            el almacenamiento y la recuperación de información, mejorando la eficiencia y asegurando el 
+                            cumplimiento de los estándares de la empresa.</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
-        <div class="Container-Education">
+        <div class="Container-Education Reveal">
             <div class="Container-Cards">
                 <h2>Educación</h2>
                 <div class="Card">
