--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                     <li><a href="#Section-Main">Inicio</a></li>
                     <li><a href="#Section-AboutMe">Sobre mi</a></li>
                     <li><a href="#Section-Experience-Education">Experiencia</a></li>
-                    <li><a href="#Section-Contacto">Contacto</a></li>
+                    <li><a href="#Section-Projects">Proyectos</a></li>
+                    <li><a href="#Section-Contact">Contacto</a></li>
             </ul>
         </nav>
     </div>
@@ -188,7 +189,23 @@
                 </div>
             </div>   
     </section>
-    <section id="Section-Contacto">
+
+    <section id="Section-Projects">
+        <div class="Container-Projects">
+            <h2>Proyectos</h2>
+            <div class="Container-Cards">
+                <div class="Card">
+                    <h3>Curso de Java.</h3>
+                    <a href="https://github.com/DevilsWillCry/CURSO-JAVA" target="_blank"><img src="img/CursoJava.jpg" alt="Logo de Java"></a>
+                    <p>Este curso fue diseñado para principiantes y desarrolladores Java, ofreciendo una introducción 
+                        a la programación orientada a objetos y la utilización de herramientas de desarrollo. El curso incluye 
+                        temas como clases, objetos, métodos, herencia, interfaces, y excepciones.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="Section-Contact">
 
     </section>
     <div class="arrow-up">
