Terminar sección contactos

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                     <p><a href="https://www.linkedin.com/in/miguel-angel-me%C3%B1aca-coral-037b06213/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></p>
                     <p><a href="mailto:miguel.menaca01@gmail.com"><i class="fa-solid fa-paper-plane"></i></a></p>
                 </div>
+            </div>
         </div>
     </section>
     <section id="Section-Experience-Education">
@@ -195,11 +196,20 @@
             <h2>Proyectos</h2>
             <div class="Container-Cards">
                 <div class="Card">
-                    <h3>Curso de Java.</h3>
+                    <h3>Curso de Java</h3>
                     <a href="https://github.com/DevilsWillCry/CURSO-JAVA" target="_blank"><img src="img/CursoJava.jpg" alt="Logo de Java"></a>
-                    <p>Este curso fue diseñado para principiantes y desarrolladores Java, ofreciendo una introducción 
-                        a la programación orientada a objetos y la utilización de herramientas de desarrollo. El curso incluye 
-                        temas como clases, objetos, métodos, herencia, interfaces, y excepciones.</p>
+                </div>
+                <div class="Card">
+                    <h3>Curso de Java</h3>
+                    <a href="https://github.com/DevilsWillCry/CURSO-JAVA" target="_blank"><img src="img/CursoJava.jpg" alt="Logo de Java"></a>
+                </div>
+                <div class="Card">
+                    <h3>Curso de Java</h3>
+                    <a href="https://github.com/DevilsWillCry/CURSO-JAVA" target="_blank"><img src="img/CursoJava.jpg" alt="Logo de Java"></a>
+                </div>
+                <div class="Card">
+                    <h3>Curso de Java</h3>
+                    <a href="https://github.com/DevilsWillCry/CURSO-JAVA" target="_blank"><img src="img/CursoJava.jpg" alt="Logo de Java"></a>
                 </div>
             </div>
         </div>
