Mejorar sección contacto y empezar a hacer el footer

--- a/index.html
+++ b/index.html
@@ -211,12 +211,23 @@
                     <h3>Curso de Java</h3>
                     <a href="https://github.com/DevilsWillCry/CURSO-JAVA" target="_blank"><img src="img/CursoJava.jpg" alt="Logo de Java"></a>
                 </div>
+                <div class="Card">
+                    <h3>Curso de Java</h3>
+                    <a href="https://github.com/DevilsWillCry/CURSO-JAVA" target="_blank"><img src="img/CursoJava.jpg" alt="Logo de Java"></a>
+                </div>
             </div>
         </div>
     </section>
 
     <section id="Section-Contact">
-
+            <h2>Contacto</h2>
+            <form class="Container-Form">
+                <input type="text" placeholder="Nombre">
+                <input type="email" placeholder="Correo electrónico">
+                <input class="Subject-Form" type="text" placeholder="Asunto">
+                <textarea placeholder="Escribe tu mensaje"></textarea>
+                <button type="submit">Enviar</button>
+            </form>
     </section>
     <div class="arrow-up">
         <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
